syntax = "proto3";
import "google/api/annotations.proto";
option go_package=".;pb";
message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse{
  string token = 1;
}
service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  };
};
